# beamline

./: .gitignore  Cargo.toml  index.html  main.scss
asteroids/: Cargo.toml  index.html  main.scss
asteroids/src/: lib.rs  main.rs  wgpu_context.rs
beamline/: Cargo.toml
beamline-line/: Cargo.toml
beamline-line/src/: internal.rs
beamline-line/src/internal/: binning.wgsl  fixed_buffer.rs  plan.md  pushbuf.rs  stack.rs  tiler.rs  types.rs
beamline-line/src/internal/tests/: gpu.rs
beamline/benches/: bench_tiling_lines.rs
beamline/src/: bbox.rs  buffers.rs  compare.rs  interval.rs  lib.rs  line.rs  line_sdf.wgsl  polygon.rs  renderer.rs  style.rs  tiler.rs  types.rs
src/: bucketer.rs  frame_timer.rs  lib.rs  main.rs  shader.wgsl  wgpu_context.rs
src/beamline/: compare.rs  line.rs  polygon.rs
