[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "asteroids_lib"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
cfg-if = "1"
cgmath = "0.18.0"
env_logger = "0.11.6"
futures = "0.3.31"
kiddo = "5.0.3"
log = "0.4.22"
pollster = "0.3"
wgpu = "23.0.1"
winit = "0.30.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "23.0.1", default-features = true, features = ["webgpu"] }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = [
    "Document",
    "Window",
    "Element",
    "Performance",
] }
web-time = "1.1.0"

[dev-dependencies]
proptest = "1.6.0"
