[package]
name = "beamline-line"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "beamline_line"

[dependencies]
bytemuck = "1.21.0"
wgpu = "23.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "23.0.1", default-features = true, features = ["webgpu"] }

[dev-dependencies]
proptest = "1.6.0"
criterion = "0.5.1"
