[package]
name = "beamline"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "beamline"

[dependencies]
cgmath = "0.18.0"
kiddo = "5.0.3"
wgpu = "23.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "23.0.1", default-features = true, features = ["webgpu"] }

[dev-dependencies]
proptest = "1.6.0"
